# language_learning_mentor

./: .env  .gitignore  README.md  pyproject.toml
language_learning_mentor/: crew.py  gui.py  level_assessment.json  main.py  quiz_score.md  quizzes.json
language_learning_mentor/config/: agents.yaml  tasks.yaml
language_learning_mentor/gui/: analysis_dialog.py  analysis_input_dialog.py  dashboard_screen.py  level_detection_screen.py  login_screen.py  main_window.py  quiz_dialog.py  quiz_screen.py  style_manager.py
language_learning_mentor/logic/: app_controller.py  config_manager.py  language_processor.py
language_learning_mentor/tools/: calculator.py  email_sender.py
tests/: email_test.py
