[tool.poetry]
name = "language-learning-mentor"
version = "0.1.0"
description = ""
authors = ["ryuk4real <84407165+ryuk4real@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
